# cape_rs

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
artifacts/: cape_pyo3_demo.executed.ipynb
docs/: CAPE_algorithm_notes.md  CAPE_rust_port_design.md  DoD.md  ONBOARDING.md  verification.md
notebooks/: cape_pyo3_demo.ipynb
python/cape_demo/: __init__.py  extract.py  native_smoke.py  official_data.py  visualization.py
src/: extractor.rs  geometry.rs  histogram.rs  lib.rs  linalg.rs  models.rs
tests/: test_official_demo.py
